--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "grunt-contrib-jade": "^0.14.0",
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.1",
+    "load-grunt-tasks": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com:luisgagocasas/sitio-desocabaya.git"
   }
 }
